use URI class for URLData